--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.7",
-    "nuxt": "3.0.0"
+    "nuxt": "3.0.0",
+    "vuetify": "^3.0.6"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
