--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   // https://nuxt.com/docs/guide/concepts/typescript
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
-    "strict": false
+    "strict": false,
+    "types": ["vuetify"],
+    "typeRoots": ["./node_modules/@types", "./node_modules/vuetify/types"]
   }
 }
