--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "^8.0.0-beta.7",
+    "@vite-pwa/nuxt": "^0.0.7",
     "nuxt": "^3.0.0"
   },
   "dependencies": {
