--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,3 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
-  "extends": "./.nuxt/tsconfig.json",
-  "compilerOptions": {
-    "strict": false,
-    "types": ["vuetify"],
-    "typeRoots": ["./node_modules/@types", "./node_modules/vuetify/types"]
-  }
+  "extends": "./.nuxt/tsconfig.json"
 }
