--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@nuxtjs/i18n": "^8.0.0-beta.7",
     "@vite-pwa/nuxt": "^0.0.7",
     "cross-env": "^7.0.3",
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.0.0",
+    "workbox-precaching": "^6.5.4"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
