--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@pinia/nuxt": "^0.4.7",
     "sass": "^1.57.1",
     "vuetify": "^3.0.6"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
