--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vite-pwa/nuxt": "^0.0.7",
     "cross-env": "^7.0.3",
     "nuxt": "^3.0.0",
+    "nuxt-security": "^0.13.0",
     "workbox-precaching": "^6.5.4"
   },
   "dependencies": {
