--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@microsoft/signalr": "^7.0.2",
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
     "@pinia/nuxt": "^0.4.7",
+    "base64-js": "^1.5.1",
     "sass": "^1.57.1",
     "vuetify": "^3.0.6"
   },
