--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 API_BASE_URL: https://api.sechat.net
-TURN_SERVER_KEY: ""
+TURN_SERVER_API_KEY: ""
+TURN_SERVER_USERNAME: ""
+TURN_SERVER_PASSWORD: ""
