--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_BASE_URL=https://api.sechat.app
-TURN_SERVER_API_KEY=123
+NUXT_API_BASE=https://api.sechat.app
+NUXT_TURN_API_KEY=secret
+NUXT_PUBLIC_VAPID_KEY=secret
