--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 NODE_TLS_REJECT_UNAUTHORIZED=0
-API_BASE_URL=https://localhost:5100
+NUXT_API_BASE_URL=https://localhost:5100
+NUXT_PUBLIC_VAPID_KEY=BIazXIHc0G_xFGTio-sMOdSbarBmeVNtcKaQGsV6mLnaO1cn3_b_-j218VFz5YiSOWaVHX58tRo_dbkHh-xXfpg
