--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NUXT_API_BASE=https://api.sechat.app
-NUXT_TURN_API_KEY=secret
-NUXT_PUBLIC_VAPID_KEY=secret
+API_BASE=https://api.sechat.app
+TURN_API_KEY=secret
+PUBLIC_VAPID_KEY=secret
