--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,3 @@
-NODE_TLS_REJECT_UNAUTHORIZED=0
-NUXT_API_BASE_URL=https://localhost:5100
-NUXT_PUBLIC_VAPID_KEY=BIazXIHc0G_xFGTio-sMOdSbarBmeVNtcKaQGsV6mLnaO1cn3_b_-j218VFz5YiSOWaVHX58tRo_dbkHh-xXfpg
-NUXT_PUBLIC_APP_VERSION=BETA-v0.5.2.5
+TLS_REJECT_UNAUTHORIZED=0
+API_BASE_URL=https://localhost:5100
+PUBLIC_VAPID_KEY=BIazXIHc0G_xFGTio-sMOdSbarBmeVNtcKaQGsV6mLnaO1cn3_b_-j218VFz5YiSOWaVHX58tRo_dbkHh-xXfpg
