--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_BASE_URL=https://api.sechat.app
+NUXT_PUBLIC_API_BASE=https://api.sechat.app
+NUXT_PUBLIC_VAPID_KEY=BIazXIHc0G_xFGTio-sMOdSbarBmeVNtcKaQGsV6mLnaO1cn3_b_-j218VFz5YiSOWaVHX58tRo_dbkHh-xXfpg
+NUXT_TURN_API_KEY=secret
