--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/i18n": "^8.0.0-beta.7",
-    "@vite-pwa/nuxt": "^0.0.7",
+    "@nuxtjs/i18n": "8.0.0-beta.12",
+    "@vite-pwa/nuxt": "^0.0.8",
     "cross-env": "^7.0.3",
-    "nuxt": "^3.4.3",
+    "nuxt": "3.5.0",
     "nuxt-security": "^0.13.0",
     "workbox-precaching": "^6.5.4"
   },
   "dependencies": {
     "@mdi/font": "^7.1.96",
-    "@microsoft/signalr": "^7.0.2",
+    "@microsoft/signalr": "^7.0.5",
     "@nuxt/image-edge": "^1.0.0-27840416.dc1ed65",
-    "@pinia/nuxt": "^0.4.7",
+    "@pinia/nuxt": "^0.4.11",
     "base64-js": "^1.5.1",
     "sass": "^1.57.1",
-    "vuetify": "^3.2.1"
+    "vuetify": "^3.2.5"
   },
   "overrides": {
     "vue": "latest"
