--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "devDependencies": {
     "@nuxtjs/i18n": "8.0.0-beta.12",
-    "@vite-pwa/nuxt": "^0.0.9",
+    "@vite-pwa/nuxt": "^0.0.10",
     "cross-env": "^7.0.3",
-    "nuxt": "3.5.0",
+    "nuxt": "^3.5.2",
     "nuxt-security": "^0.13.0",
     "workbox-precaching": "^6.5.4"
   },
