--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "18"
       - name: Install Dependencies
-        run: npm install
+        run: npm install --ignore-scripts puppeteer
       - name: Inject Secrets
         run: |
           echo "${{ secrets.ENV_FILE }}" > .env
