--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tiptap/starter-kit": "^2.0.3",
     "@tiptap/vue-3": "^2.0.3",
     "base64-js": "^1.5.1",
+    "cryptr": "^6.2.0",
     "get-urls": "^11.0.0",
     "is-base64": "^1.1.0",
     "puppeteer": "^20.7.3",
