--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vite-pwa/nuxt": "^0.1.0",
     "cross-env": "^7.0.3",
     "nuxt": "^3.6.1",
+    "nuxt-icon": "^0.4.1",
     "nuxt-security": "^0.13.1",
     "workbox-precaching": "^7.0.0"
   },
