--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@tiptap/starter-kit": "^2.0.4",
     "@tiptap/vue-3": "^2.0.4",
     "base64-js": "^1.5.1",
+    "crypto-es": "^2.0.4",
     "get-urls": "^12.0.0",
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
