--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,16 @@
       "name": "server: nuxt",
       "outputCapture": "std",
       "program": "${workspaceFolder}/node_modules/nuxi/bin/nuxi.mjs",
-      "args": ["dev"]
+      "args": [
+        "dev",
+        "--dotenv",
+        ".env.development",
+        "--https",
+        "--ssl-cert",
+        "${workspaceFolder}/localhost.pem",
+        "--ssl-key ",
+        "${workspaceFolder}/localhost-key.pem"
+      ]
     }
   ],
   "compounds": [
