--- a/package.json
+++ b/package.json
@@ -7,37 +7,41 @@
     "dev-def": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.7.3",
     "@nuxtjs/i18n": "8.0.0-beta.12",
-    "@vite-pwa/nuxt": "^0.1.0",
+    "@vite-pwa/nuxt": "^0.1.1",
+    "@vitejs/plugin-vue": "^4.3.4",
     "cross-env": "^7.0.3",
-    "cypress": "^13.1.0",
+    "cypress": "^13.2.0",
     "nuxt": "^3.7.2",
     "nuxt-icon": "^0.5.0",
     "nuxt-security": "^0.14.4",
+    "vitest": "^0.33.0",
     "workbox-precaching": "^7.0.0"
   },
   "dependencies": {
     "@mdi/font": "^7.2.96",
-    "@microsoft/signalr": "^7.0.10",
-    "@nuxt/image-edge": "1.0.0-rc.1-28232102.b595fa0",
+    "@microsoft/signalr": "^7.0.11",
+    "@nuxt/image-edge": "1.0.0-rc.2-28257829.3628546",
     "@pinia/nuxt": "^0.4.11",
-    "@tiptap/extension-character-count": "^2.1.8",
-    "@tiptap/extension-image": "^2.1.8",
-    "@tiptap/extension-link": "^2.1.8",
-    "@tiptap/extension-underline": "^2.1.8",
-    "@tiptap/pm": "^2.1.8",
-    "@tiptap/starter-kit": "^2.1.8",
+    "@tiptap/extension-character-count": "^2.1.11",
+    "@tiptap/extension-image": "^2.1.11",
+    "@tiptap/extension-link": "^2.1.11",
+    "@tiptap/extension-underline": "^2.1.11",
+    "@tiptap/pm": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
     "@tiptap/vue-3": "^2.1.8",
     "base64-js": "^1.5.1",
     "crypto-es": "^2.0.4",
     "get-urls": "^12.1.0",
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
-    "sass": "^1.66.1",
-    "vuetify": "^3.3.15"
+    "sass": "^1.68.0",
+    "vuetify": "^3.3.17"
   },
   "overrides": {
     "vue": "latest"
