--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.7.3",
-    "@nuxtjs/i18n": "8.0.0-beta.12",
+    "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@vite-pwa/nuxt": "^0.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "cross-env": "^7.0.3",
