--- a/package.json
+++ b/package.json
@@ -11,37 +11,37 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.7.3",
+    "@nuxt/test-utils": "^3.8.0",
     "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@vite-pwa/nuxt": "^0.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "cross-env": "^7.0.3",
-    "cypress": "^13.2.0",
+    "cypress": "^13.3.2",
     "nuxt": "^3.8.0",
     "nuxt-icon": "^0.5.0",
     "nuxt-security": "^0.14.4",
-    "vitest": "^0.33.0",
+    "vitest": "^0.34.6",
     "workbox-precaching": "^7.0.0"
   },
   "dependencies": {
-    "@mdi/font": "^7.2.96",
-    "@microsoft/signalr": "^7.0.11",
-    "@nuxt/image-edge": "1.0.0-rc.3-28277678.46975fe",
-    "@pinia/nuxt": "^0.4.11",
-    "@tiptap/extension-character-count": "^2.1.11",
-    "@tiptap/extension-image": "^2.1.11",
-    "@tiptap/extension-link": "^2.1.11",
-    "@tiptap/extension-underline": "^2.1.11",
-    "@tiptap/pm": "^2.1.11",
-    "@tiptap/starter-kit": "^2.1.11",
-    "@tiptap/vue-3": "^2.1.11",
+    "@mdi/font": "^7.3.67",
+    "@microsoft/signalr": "^7.0.12",
+    "@nuxt/image-edge": "1.0.0-28299296.4360928",
+    "@pinia/nuxt": "^0.5.1",
+    "@tiptap/extension-character-count": "^2.1.12",
+    "@tiptap/extension-image": "^2.1.12",
+    "@tiptap/extension-link": "^2.1.12",
+    "@tiptap/extension-underline": "^2.1.12",
+    "@tiptap/pm": "^2.1.12",
+    "@tiptap/starter-kit": "^2.1.12",
+    "@tiptap/vue-3": "^2.1.12",
     "base64-js": "^1.5.1",
     "crypto-es": "^2.0.4",
     "get-urls": "^12.1.0",
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
-    "sass": "^1.69.0",
-    "vuetify": "^3.3.20"
+    "sass": "^1.69.4",
+    "vuetify": "^3.3.22"
   },
   "overrides": {
     "vue": "latest"
