--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
     "sass": "^1.69.5",
+    "vue3-emoji-picker": "^1.1.8",
     "vuetify": "^3.4.2"
   },
   "overrides": {
