--- a/package.json
+++ b/package.json
@@ -11,37 +11,37 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@nuxt/test-utils": "^3.8.1",
-    "@nuxtjs/i18n": "^8.0.0-rc.5",
-    "@vite-pwa/nuxt": "^0.2.3",
-    "@vitejs/plugin-vue": "^4.5.0",
+    "@nuxt/test-utils": "^3.9.0",
+    "@nuxtjs/i18n": "^8.0.0",
+    "@vite-pwa/nuxt": "^0.4.0",
+    "@vitejs/plugin-vue": "^5.0.2",
     "cross-env": "^7.0.3",
-    "cypress": "^13.5.1",
-    "nuxt": "^3.8.1",
-    "nuxt-icon": "^0.6.6",
-    "nuxt-security": "^0.14.4",
+    "cypress": "^13.6.2",
+    "nuxt": "^3.9.0",
+    "nuxt-icon": "^0.6.8",
+    "nuxt-security": "^1.0.0",
     "workbox-precaching": "^7.0.0"
   },
   "dependencies": {
-    "@mdi/font": "^7.3.67",
+    "@mdi/font": "^7.4.47",
     "@microsoft/signalr": "^8.0.0",
-    "@nuxt/image-edge": "1.0.0-28336957.57c0f74",
+    "@nuxt/image-edge": "1.1.0-28404773.c60aac2",
     "@pinia/nuxt": "^0.5.1",
-    "@tiptap/extension-character-count": "^2.1.12",
-    "@tiptap/extension-image": "^2.1.12",
-    "@tiptap/extension-link": "^2.1.12",
-    "@tiptap/extension-underline": "^2.1.12",
-    "@tiptap/pm": "^2.1.12",
-    "@tiptap/starter-kit": "^2.1.12",
-    "@tiptap/vue-3": "^2.1.12",
+    "@tiptap/extension-character-count": "^2.1.13",
+    "@tiptap/extension-image": "^2.1.13",
+    "@tiptap/extension-link": "^2.1.13",
+    "@tiptap/extension-underline": "^2.1.13",
+    "@tiptap/pm": "^2.1.13",
+    "@tiptap/starter-kit": "^2.1.13",
+    "@tiptap/vue-3": "^2.1.13",
     "base64-js": "^1.5.1",
     "crypto-es": "^2.1.0",
     "get-urls": "^12.1.0",
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
-    "sass": "^1.69.5",
+    "sass": "^1.69.7",
     "vue3-emoji-picker": "^1.1.8",
-    "vuetify": "^3.4.2"
+    "vuetify": "^3.4.9"
   },
   "overrides": {
     "vue": "latest"
