--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.9.0",
-    "@nuxtjs/i18n": "^8.0.0",
+    "@nuxtjs/i18n": "^8.1.1",
     "@vite-pwa/nuxt": "^0.4.0",
     "@vitejs/plugin-vue": "^5.0.2",
     "cross-env": "^7.0.3",
     "cypress": "^13.6.2",
-    "nuxt": "^3.10.0",
+    "nuxt": "^3.10.3",
     "nuxt-icon": "^0.6.8",
     "nuxt-security": "^0.14.4",
     "workbox-precaching": "^7.0.0"
@@ -26,19 +26,20 @@
     "@mdi/font": "^7.4.47",
     "@microsoft/signalr": "^8.0.0",
     "@pinia/nuxt": "^0.5.1",
-    "@tiptap/extension-character-count": "^2.2.0",
-    "@tiptap/extension-image": "^2.2.0",
-    "@tiptap/extension-link": "^2.2.0",
-    "@tiptap/extension-underline": "^2.2.0",
-    "@tiptap/pm": "^2.2.0",
-    "@tiptap/starter-kit": "^2.2.0",
-    "@tiptap/vue-3": "^2.2.0",
+    "@tiptap/extension-character-count": "^2.2.4",
+    "@tiptap/extension-image": "^2.2.4",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/extension-underline": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "@tiptap/vue-3": "^2.2.4",
     "base64-js": "^1.5.1",
     "crypto-es": "^2.1.0",
     "get-urls": "^12.1.0",
     "is-base64": "^1.1.0",
     "request": "^2.88.2",
-    "sass": "^1.70.0",
+    "rollup": "^4.12.0",
+    "sass": "^1.71.1",
     "vue3-emoji-picker": "^1.1.8",
     "vuetify": "^3.5.1"
   },
